:recycle: refactor: refactoring code